Create contact section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" 
         crossorigin="anonymous">
 
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
     <!-- AOS CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
@@ -135,13 +138,13 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-grid">
                             <div class="grid-item grid-item-1"  data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                                <img src="imgs/hero-1.jpg" alt="تصميم ويب حديث" class="grid-img">
+                                <img src="imgs/hero-1.jpg" alt="تصميم ويب حديث" class="grid-img" loading="lazy">
                             </div>
                             <div class="grid-item grid-item-2"  data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <img src="imgs/hero-2.jpg" alt="تطوير تطبيقات الويب" class="grid-img">
+                                <img src="imgs/hero-2.jpg" alt="تطوير تطبيقات الويب" class="grid-img" loading="lazy">
                             </div>
                             <div class="grid-item grid-item-3"  data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                                <img src="imgs/colleagues.jpg" alt="فريق العمل" class="grid-img">
+                                <img src="imgs/colleagues.jpg" alt="فريق العمل" class="grid-img" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -200,22 +203,22 @@
                                 <div class="row g-2">
                                     <div class="col-6" data-aos="fade-up" data-aos-duration="800">
                                         <div class="image-item">
-                                            <img src="imgs/coding-1.jpg" alt="" class="img-fluid">
+                                            <img src="imgs/coding-1.jpg" alt="" class="img-fluid" loading="lazy">
                                         </div>
                                     </div>
                                     <div class="col-6" data-aos="fade-down" data-aos-duration="800" data-aos-delay="100">
                                         <div class="image-item">
-                                            <img src="imgs/coding-2.jpg" alt="" class="img-fluid">
+                                            <img src="imgs/coding-2.jpg" alt="" class="img-fluid" loading="lazy">
                                         </div>
                                     </div>
                                     <div class="col-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                         <div class="image-item">
-                                            <img src="imgs/coding-3.jpg" alt="" class="img-fluid">
+                                            <img src="imgs/coding-3.jpg" alt="" class="img-fluid" loading="lazy">
                                         </div>
                                     </div>
                                     <div class="col-6" data-aos="fade-down" data-aos-duration="800" data-aos-delay="300">
                                         <div class="image-item">
-                                            <img src="imgs/hero-1.jpg" alt="" class="img-fluid">
+                                            <img src="imgs/hero-1.jpg" alt="" class="img-fluid" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -326,11 +329,11 @@
                 </div>
             </div>
             <div class="container projects-body mt-4">
-                <div class="row justify-content-center align-items-center g-3">
+                <div class="row justify-content-center align-items-start g-3">
                     <!-- Project card -->
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-down" data-aos-duration="500" data-aos-delay="300">
                         <div class="project-card">
-                            <img src="imgs/mockups/ainess-mockup.png" alt="Website Mockup" class="project-img">
+                            <img src="imgs/mockups/ainess-mockup.png" alt="Website Mockup" class="project-img" loading="lazy">
                             <div class="project-content text-center text-lg-end">
                                 <span class="project-badge">صفحة هبوط</span>
                                 <h3 class="project-title">صفحة هبوط لمقهى Ainess</h3>
@@ -347,7 +350,7 @@
                     <!-- Project card -->
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="400">
                         <div class="project-card">
-                            <img src="imgs/mockups/drSounny-mockup.png" alt="Website Mockup" class="project-img">
+                            <img src="imgs/mockups/drSounny-mockup.png" alt="Website Mockup" class="project-img" loading="lazy">
                             <div class="project-content text-center text-lg-end">
                                 <span class="project-badge">صفحة هبوط</span>
                                 <h3 class="project-title">صفحة هبوط لعيادة د. سوني لطب العيون</h3>
@@ -364,7 +367,7 @@
                     <!-- Project card -->
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
                         <div class="project-card">
-                            <img src="imgs/mockups/foody-mockup.png" alt="Website Mockup" class="project-img">
+                            <img src="imgs/mockups/foody-mockup.png" alt="Website Mockup" class="project-img" loading="lazy">
                             <div class="project-content text-center text-lg-end">
                                 <span class="project-badge">صفحة هبوط</span>
                                 <h3 class="project-title">صفحة هبوط لمطعم Foody</h3>
@@ -381,7 +384,7 @@
                     <!-- Project card -->
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="600">
                         <div class="project-card">
-                            <img src="imgs/mockups/hpm-mockup.png" alt="Website Mockup" class="project-img">
+                            <img src="imgs/mockups/hpm-mockup.png" alt="Website Mockup" class="project-img" loading="lazy">
                             <div class="project-content text-center text-lg-end">
                                 <span class="project-badge">صفحة هبوط</span>
                                 <h3 class="project-title">صفحة هبوط لمركز HPM للتكوين</h3>
@@ -398,7 +401,7 @@
                     <!-- Project card -->
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-down" data-aos-duration="500" data-aos-delay="700">
                         <div class="project-card">
-                            <img src="imgs/mockups/picksouk-mockup.png" alt="Website Mockup" class="project-img">
+                            <img src="imgs/mockups/picksouk-mockup.png" alt="Website Mockup" class="project-img" loading="lazy">
                             <div class="project-content text-center text-lg-end">
                                 <span class="project-badge">موقع تجاري</span>
                                 <h3 class="project-title">موقع حديث للتجارة الالكترونية لpicksouk</h3>
@@ -415,7 +418,7 @@
                     <!-- Project card -->
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
                         <div class="project-card">
-                            <img src="imgs/mockups/optiline-mockup.png" alt="Website Mockup" class="project-img">
+                            <img src="imgs/mockups/optiline-mockup.png" alt="Website Mockup" class="project-img" loading="lazy">
                             <div class="project-content text-center text-lg-end">
                                 <span class="project-badge">صفحة هبوط</span>
                                 <h3 class="project-title">صفحة هبوط لمتجر Optiline للبصريات</h3>
@@ -432,6 +435,64 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact section -->
+        <section id="contact" class="contact-section py-5">
+            <div class="container">
+                <div class="row align-items-center justify-content-center g-5">
+                    <!-- Image Column -->
+                    <div class="col-lg-6 col-md-6">
+                        <div class="contact-image-wrapper position-relative">
+                            <!-- Placeholder image - replace with your actual image -->
+                            <img src="imgs/developer.jpg"
+                                class="img-fluid rounded shadow"
+                                alt="developer"
+                                loading="lazy" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
+                            <!-- Floating Badges -->
+                            <span class="contact-badge badge-top-left" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">مواقع مطاعم</span>
+                            <span class="contact-badge badge-top-right" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="700">مواقع أطباء</span>
+                            <span class="contact-badge badge-bottom-left" data-aos="fade-down" data-aos-duration="500" data-aos-delay="700">مواقع تجارة</span>
+                            <span class="contact-badge badge-bottom-right" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">إعادة تصميم المواقع</span>
+                        </div>
+                    </div>
+                    <!-- Text Column -->
+                    <div class="col-lg-6 col-md-6">
+                        <div class="contact-info">
+                            <span class="contact-subtitle d-block mb-2" data-aos="fade-down" data-aos-duration="500" data-aos-delay="700">أنشئ موقعك الآن</span>
+                            <h1 class="contact-title mb-3" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="700">
+                                حوّل فكرتك إلى حضور رقمي يجذب العملاء تلقائياً
+                            </h1>
+                            <p class="contact-description mb-4" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
+                                امتلك موقعاً احترافياً يُعرّف بخدماتك، يزيد من ثقة العملاء بك، ويعمل على مدار الساعة 
+                                لجلب فرص جديدة لنشاطك التجاري. وجودك الرقمي اليوم ليس رفاهية… بل هو أقوى وسيلة نمو.
+                            </p>
+
+                            <hr class="my-4">
+
+                            <h3 class="contact-heading mb-3" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">تواصل معنا</h3>
+                            <div class="social-links d-flex align-items-center gap-3" data-aos="fade-down" data-aos-duration="500" data-aos-delay="700">
+                                <a href="tel:0633908104" class="contact-link">
+                                    <i class="fa-solid fa-phone"></i>
+                                </a>
+                                <a href="mailto:webloom.dig@gmail.com" class="contact-link">
+                                    <i class="bi bi-envelope-paper-fill"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="d-flex justify-content-center">
+                <span>
+                    <i class="fa-brands fa-webflow"></i>
+                    ويبلووم.
+                </span>
+                جميع الحقوق  محفوظة.
+            </div>
+        </footer>
 
     </div>
 
